<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/notificationHeader"
        style="@style/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />

    <LinearLayout
        android:id="@+id/notificationsLayout"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp" >

        <TextView
            android:id="@+id/listenerTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:lines="1"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="@string/listeneing"
            style="@style/label_text_small" />
	
        <LinearLayout
        android:id="@+id/chatButtonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >
        
        <Button
            android:id="@+id/wishButton"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/say_congrats" />
        <Button
            android:id="@+id/seeChat"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button"
            android:text="@string/see_chats" />
		</LinearLayout>
		
        <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/darker_gray" />
        
        <TextView
        android:id="@+id/chartsHeader"
        style="@style/label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/charts_Label"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000" />
        
        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />
        	<LinearLayout
        android:id="@+id/chatsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp" >

        <TextView
            android:id="@+id/chatsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listeneing" />

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    </LinearLayout>

</LinearLayout>